--- a/bff/client/index.html
+++ b/bff/client/index.html
@@ -27,7 +27,12 @@
                     <td class="last-reading">{{time}}</td>
                     <td class="litres-per-pulse"><input data-original-value class="litres-per-pulse" type="text" value="{{litresPerPulse}}"/></td>
                     <td class="reading">{{reading}}</td>
-                    <td class="save"><input data-device-channel-id="{{deviceChannelId}}" class="save" type="button" value="Save"></input></td>
+                    <td class="save">
+                         <!--these two are shown/hidden using css by adding/removing a class on the tr -->
+                        <input data-device-channel-id="{{deviceChannelId}}" class="save" type="button" value="Save"></input>
+                        <div class='saving-text'>Saving...</div>
+                        <div class='error-text'></div>
+                        </td>
                  </tr>
               {{/rows}}
             </tbody>
