--- a/bff/client/index.html
+++ b/bff/client/index.html
@@ -16,7 +16,7 @@
                     <td class="last-reading">Last Reading</td>
                     <td class="litres-per-pulse">Litres / Pulse</td>
                     <td class="reading">Reading (KL)</td>
-                    <td class="reading"></td>
+                    <td class="save"></td>
                 </tr>
             </thead>
             <tbody>
@@ -32,7 +32,7 @@
                         <input data-device-channel-id="{{deviceChannelId}}" class="save" type="button" value="Save"></input>
                         <div class='saving-text'>Saving...</div>
                         <div class='error-text'></div>
-                        </td>
+                    </td>
                  </tr>
               {{/rows}}
             </tbody>
