add open keyboard button

--- a/bff/client/index.html
+++ b/bff/client/index.html
@@ -6,8 +6,12 @@
         <link rel="stylesheet" type="text/css" href="/client/index.css" />
     </head>
     <body>
+        <div id="open-keyboard-container">
+            <input id="open-keyboard" type="button" value="Open Keyboard"></input>
+        </div>
         <div id="table-container"></div>
         <script src="/client/js/meter-reading.js"></script>
+        <script src="/client/js/bind-open-keyboard.js"></script>
         <script id="table-body" type="x-tmpl-mustache">
             <thead>
                 <tr>
