--- a/bff/client/index.html
+++ b/bff/client/index.html
@@ -1,14 +1,16 @@
 <html>
     <head>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.2/mustache.min.js"></script>
+        <script src="/client/js/dependencies/jquery-3.3.1.min.js"></script>
+        <script src="/client/js/dependencies/lodash-4.17.10.min.js"></script>
+        <script src="/client/js/dependencies/mustache-2.3.2.min.js"></script>
         <link rel="stylesheet" type="text/css" href="/client/index.css" />
     </head>
     <body>
-        <div id="open-keyboard-container">
-            <input id="open-keyboard" type="button" value="Open Keyboard"></input>
+        <div id="actions-container">
+            <input id="open-keyboard" type="button" value="Open Keyboard"/>
+            <input id="reload-page" type="button" value="Reload Page"/>
         </div>
+        <h2 id="error-container"></h2>
         <div id="table-container"></div>
         <script src="/client/js/meter-reading.js"></script>
         <script src="/client/js/bind-open-keyboard.js"></script>
