add auto reload every 30 minutes

--- a/bff/client/index.html
+++ b/bff/client/index.html
@@ -13,7 +13,8 @@
         <h2 id="error-container"></h2>
         <div id="table-container"></div>
         <script src="/client/js/meter-reading.js"></script>
-        <script src="/client/js/bind-open-keyboard.js"></script>
+        <script src="/client/js/bind-actions.js"></script>
+        <script src="/client/js/auto-reload.js"></script>
         <script id="table-body" type="x-tmpl-mustache">
             <thead>
                 <tr>
