--- a/server/client/advanced-readings-page.html
+++ b/server/client/advanced-readings-page.html
@@ -23,21 +23,23 @@
                     <td class="device-id">Logger</td>
                     <td class="last-reading">Last Reading</td>
                     <td class="litres-per-pulse">Litres / Pulse</td>
-                    <td class="reading">Reading (KL)</td>
+                    <td class="actual-reading">Actual Reading (KL)</td>
+                    <td class="computed-reading">Computed Reading (KL)</td>
                     <td class="save"></td>
                 </tr>
             </thead>
             <tbody>
               {{#rows}}
-                <tr data-device-channel-id="{{deviceChannelId}}">
+                <tr data-pulse-counter-id="{{id}}">
                     <td class="device-display-name"><input data-original-value="{{displayName}}" class="display-name" type="text" value="{{displayName}}"/></td>
-                    <td class="device-channel-id">{{deviceChannelId}}</td>
+                    <td class="pulse-counter-id">{{id}}</td>
                     <td class="last-reading">{{time}}</td>
                     <td class="litres-per-pulse"><input data-original-value="{{litresPerPulse}}" class="litres-per-pulse" type="text" value="{{litresPerPulse}}"/></td>
-                    <td class="reading" data-pulses="{{pulses}}">{{reading}}</td>
+                    <td class="actual-reading"><input class="actual-reading" type="text"/></td>
+                    <td class="computed-reading">{{reading}}</td>
                     <td class="save">
                          <!--these two are shown/hidden using css by adding/removing a class on the tr -->
-                        <input data-device-channel-id="{{deviceChannelId}}" class="save" type="button" value="Save"></input>
+                        <input data-pulse-counter-id="{{id}}" class="save" type="button" value="Save"></input>
                         <div class='saving-text'>Saving...</div>
                         <div class='error-text'></div>
                     </td>
