--- a/server/client/advanced-readings-page.html
+++ b/server/client/advanced-readings-page.html
@@ -36,7 +36,7 @@
                     <td class="last-reading">{{time}}</td>
                     <td class="litres-per-pulse"><input data-original-value="{{litresPerPulse}}" class="litres-per-pulse" type="text" value="{{litresPerPulse}}"/></td>
                     <td class="actual-reading"><input class="actual-reading" type="text"/></td>
-                    <td class="computed-reading">{{reading}}</td>
+                    <td class="computed-reading">{{readingKiloLitres}}</td>
                     <td class="save">
                          <!--these two are shown/hidden using css by adding/removing a class on the tr -->
                         <input data-pulse-counter-id="{{id}}" class="save" type="button" value="Save"></input>
