--- a/server/client/simple-readings-page.html
+++ b/server/client/simple-readings-page.html
@@ -30,7 +30,7 @@
                     <td style="display:none" class="litres-per-pulse"><input data-original-value="{{litresPerPulse}}" class="litres-per-pulse" type="text" value="{{litresPerPulse}}"/></td>
                     <td class="device-display-name">{{displayName}}</td>
                     <td class="last-reading">{{time}}</td>
-                    <td class="computed-reading">{{reading}}</td>
+                    <td class="computed-reading">{{readingKiloLitres}}</td>
                 </tr>
               {{/rows}}
             </tbody>
