make action buttons float during scroll

--- a/server/client/advanced-readings-page.html
+++ b/server/client/advanced-readings-page.html
@@ -11,8 +11,10 @@
             <input id="reload-page" type="button" value="Reload Page"/>
             <input id="goto-simple-view" type="button" value="Simple View"/>
         </div>
-        <h2 id="error-container"></h2>
-        <div id="table-container"></div>
+        <div id="content-container">
+            <h2 id="error-container"></h2>
+            <div id="table-container"></div>
+        </div>
         <script src="/client/js/meter-reading.js"></script>
         <script src="/client/js/bind-actions.js"></script>
         <script src="/client/js/auto-reload.js"></script>
