--- a/server/client/simple-readings-page.html
+++ b/server/client/simple-readings-page.html
@@ -10,8 +10,10 @@
             <input id="reload-page" type="button" value="Reload Page"/>
             <input id="goto-advanced-view" type="button" value="Edit"/>
         </div>
-        <h2 id="error-container"></h2>
-        <div id="table-container"></div>
+        <div id="content-container">
+            <h2 id="error-container"></h2>
+            <div id="table-container"></div>
+        </div>
         <script src="/client/js/meter-reading.js"></script>
         <script src="/client/js/bind-actions.js"></script>
         <script src="/client/js/auto-reload.js"></script>
